# fast_api_todo

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/: app.py
src/api/: __init__.py  todo_items.py  todo_list.py
src/controller/: todo.py
src/core/: settings.py
src/db/: models.py
src/db/alembic/: env.py
src/db/alembic/versions/: 2024_06_04_2112-fe25d71a788d_new_migration_name.py
src/schemas/: todo.py
